refactor: update ZoneEntity to auto id